Fixed resize bug on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -255,6 +255,10 @@ a {
         height: 10px;
         margin-top: 25px;
         background-color: @swatch7;
+
+        @media @smartphone {
+            display: none;
+        }
     }
 
     .thumb-container {
@@ -271,6 +275,10 @@ a {
             margin-top: 250;
             width: 350px;
             border: 5px solid white;
+        }
+
+        @media @smartphone {
+            display: none;
         }
     }
 
